[package]
name = "vhrd-discord-bot"
version = "0.1.0"
edition = "2018"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]